header overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@ header {
   position: fixed;
   padding-top: 1rem;
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   background: #eee;
